# iaps-takehome

./: .gitignore  README.md  batch_search.py  comparative_proposal_analyzer.py  csv_proposal_analyzer.py  main.py  org_evaluator.py  pyproject.toml  research_report.py  run_comparative_analysis.py
comparative_analysis/: FINAL_comparative_ranking_detailed_20250524_135312.csv  FINAL_comparative_ranking_detailed_20250524_135420.csv  FINAL_comparative_ranking_summary_20250524_135420.md  batch_1_results_20250524_134811.csv  batch_2_results_20250524_134910.csv  batch_3_results_20250524_135009.csv  batch_4_results_20250524_135118.csv  batch_5_results_20250524_135230.csv  batch_6_results_20250524_135310.csv  batch_7_results_20250524_135851.csv  cumulative_results_through_batch_1_20250524_134811.csv  cumulative_results_through_batch_2_20250524_134910.csv  cumulative_results_through_batch_3_20250524_135009.csv  cumulative_results_through_batch_4_20250524_135118.csv  cumulative_results_through_batch_5_20250524_135230.csv  cumulative_results_through_batch_6_20250524_135310.csv  cumulative_results_through_batch_7_20250524_135851.csv
critical_org_assessment/: critical_organization_assessments.md
critical_org_assessment/alvarez_marshall_ai_policy_influence/: research_report.md  www.alvarezandmarsal.com_Alvarez_Marsals_Public_Sector_Services_Practice.md  www.alvarezandmarsal.com_The_AI_Governance_Challenge_For_Privacy_And_Data_R.md  www.alvarezandmarsal.com_US_Federal_Government.md  www.alvarezandmarsal.com_untitled.md
critical_org_assessment/amazon_ai_policy_influence/: aws.amazon.com_Enabling_AI_leadership_in_the_age_of_government_ef.md  aws.amazon.com_How_AWS_helps_agencies_meet_OMB_AI_governance_requ.md  research_report.md  www.aboutamazon.com_Advancing_US_regulatory_leadership_for_AI_in_2024.md  www.aboutamazon.com_Op_ed_Amazon_says_its_time_to_double_down_on_res.md
critical_org_assessment/anthropic_policy_influence_credibility/: assets.anthropic.com_Anthropic_Response_to_OSTP_RFI_March_2025_Fina.md  jobs.therundown.ai_Policy_Programs_and_Partnerships_at_Anthropic.md  research_report.md  techcrunch.com_AI_companies_upped_their_federal_lobbying_spend_in.md  techcrunch.com_Anthropic_quietly_removes_Biden_era_AI_policy_comm.md  techcrunch.com_Anthropic_submits_AI_policy_recommendations_to_the.md  www-cdn.anthropic.com_untitled.md  www.anthropic.com_An_AI_Policy_Tool_for_Today_Ambitiously_Invest_in.md  www.anthropic.com_Anthropic_signs_MOU_with_UK_Government_to_explore.md  www.lobbyfacts.eu_Anthropic_PBC_datacard_on_lobbyfactseu.md  www.opensecrets.org_Anthropic_PBC_Lobbying_Profile.md
critical_org_assessment/arm_institute_ai_policy_influence/: arminstitute.org_ARM_Institute_Receives_142M_Federal_Build_Back_B.md  arminstitute.org_ARM_Institute_Signs_Continuation_Agreement_with_De.md  arminstitute.org_DoD_funding_ARM_Institute.md  en.wikipedia.org_Advanced_Robotics_for_Manufacturing.md  research_report.md  www.dodmantech.mil_Advanced_Robotics_for_Manufacturing_ARM_Institut.md  www.manufacturingusa.com_ARM_Advanced_Robotics_for_Manufacturing.md  www.robotics247.com_ARM_Institute_DoD_sign_355M_continuation_agreem.md
critical_org_assessment/bpc_ai_policy_influence/: bipartisanpolicy.org_BPC_Applauds_the_Roadmap_for_Artificial_Intelligen.md  bipartisanpolicy.org_Key_Takeaways_AI_Executive_Order_and_Bipartisan_M.md  bipartisanpolicy.org_New_BPC_Report_Explores_Impacts_of_AI_on_American.md  cset.georgetown.edu_Artificial_Intelligence_and_National_Security_Ce.md  (+1 more)
examples/: example_with_report.py  report_only.py  simple_example.py
(+167 files in other folders)
